syntax = "proto3";
option go_package = "../models";
package models;
option csharp_namespace = "TC.Micro.WalletCore.Grpc.Protos";

service AccountGrpc {
    rpc CreateUserAccount (CreateUserAccountRequest) returns (CreateUserAccountResponse);
}

message CreateUserAccountRequest{
    int64 userId = 1;
}

message CreateUserAccountResponse{
    bool ok = 1;
    string errorMessage = 2;
}